fixed relitive refs

--- a/template/add_shooter_form.html
+++ b/template/add_shooter_form.html
@@ -1,5 +1,5 @@
 <%!
-import "LUUScoreKeeper/scoreutils"
+import "github.com/abaft/LUUScoreKeeper/scoreutils"
 %>
 <%: func WebForm(scores []scoreutils.Score, buffer *bytes.Buffer) %>
 
