--- a/template/View.html
+++ b/template/View.html
@@ -10,7 +10,7 @@ import "github.com/abaft/LUUScoreKeeper/scoreutils"
 <table class="table table-striped">
   <thead>
     <tr>
-      <th scope="col">#</th>
+      <th scope="col">Username</th>
       <th scope="col">Dicipline</th>
       <th scope="col">Score</th>
       <th scope="col">Name</th>
