--- a/template/index.html
+++ b/template/index.html
@@ -15,7 +15,7 @@
   <span class="navbar-brand mb-0 h1">LUU Riflle Score Keeper</span>
 </nav>
 
-    <div class="container">
+    <div class="container" style="margin-top:10px">
 
 	    <%@ body {%>
 		  <% } %>
