--- a/template/LoginForm.html
+++ b/template/LoginForm.html
@@ -1,7 +1,7 @@
 <%!
 import "github.com/abaft/LUUScoreKeeper/scoreutils"
 %>
-<%: func LoginForm(usernames String[], averages []float32, buffer *bytes.Buffer) %>
+<%: func LoginForm(usernames []string, averages []float32, buffer *bytes.Buffer) %>
 
 <%~ "index.html" %>
 
